--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,9 @@
 gpus: 1 # number of gpus
 workers: 0 # number of cpu threads
-learning_rate: 0.001 # initial learning rate
-weight_decay: 0.005  # optimizer weight decay
+model: "transformer"
+patch_size: 4 # transformer input patch size
+learning_rate: 0.01 # initial learning rate
+weight_decay: 0.05  # optimizer weight decay
 epochs: 100
 batch_size: 32
 annotations_file: './data/ESC-50-master/meta/esc50.csv'
@@ -10,14 +12,19 @@ runs_dir : './runs/exp'
 target_size: 1 # target size in seconds
 target_sr: 14700 # target sample rate
 transforms:
+  type: "mel_spectrogram"
   mel_spectrogram:
     n_fft: 1024
-    hop_length: 512
-    n_mels: 30
+    hop_length: 506
+    n_mels: 32
     power: 2 # power
     center: False
     normalized: False,
     mel_scale: "slaney"
+  mfcc:
+    n_mfcc: 30
+    dct_type: 2
+    norm: 'ortho'
 train:
   folds:
     - 1
