--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,17 @@
 gpus: 1 # number of gpus
 workers: 0 # number of cpu threads
-model: "transformer"
+model:
+  type: "convolutional"
+  transformer:
+    embed_dim: 16
+    hidden_dim: 16
+    num_heads: 2
+    patch_size: 4
+    num_channels: 1
+    num_patches: 56
+    num_classes: 2
+    dropout: 0.2
+  cnn:
 patch_size: 4 # transformer input patch size
 learning_rate: 0.01 # initial learning rate
 weight_decay: 0.05  # optimizer weight decay
@@ -9,13 +20,13 @@ batch_size: 32
 annotations_file: './data/ESC-50-master/meta/esc50.csv'
 audio_dir: './data/ESC-50-master/audio/'
 runs_dir : './runs/exp'
-target_size: 1 # target size in seconds
-target_sr: 14700 # target sample rate
+target_size: 0.5 # target size in seconds
+target_sr: 22050 # target sample rate
 transforms:
   type: "mel_spectrogram"
   mel_spectrogram:
     n_fft: 1024
-    hop_length: 506
+    hop_length: 512
     n_mels: 32
     power: 2 # power
     center: False
