--- a/config.yaml
+++ b/config.yaml
@@ -15,19 +15,22 @@ model:
     dropout: 0.2
 learning_rate: 0.001 # initial learning rate
 weight_decay: 0 # optimizer weight decay
-epochs: 200
+epochs: 1
 batch_size: 64
-annotations_file: ['./data/ESC-50-master/meta/esc50.csv', './data/AudioSet/balanced_train_segments/filtered_balanced_train_segments.csv', './data/AudioSet/balanced_eval_segments/filtered_eval_train_segments.csv']
-audio_dir: ['./data/ESC-50-master/audio/', './data/AudioSet/balanced_train_segments/', './data/AudioSet/balanced_eval_segments/']
-train:
-  folds:
-    - 3
-    - 4
-    - 5
-test:
-  folds:
-    - 1
-    - 2
+datasets:
+  main: 'audioset'
+  support: 'esc50'
+  audioset:
+    annotations_file: './data/AudioSet/balanced_train_segments/filtered_balanced_train_segments.csv'
+    audio_dir: './data/AudioSet/balanced_train_segments/'
+  esc50:
+    annotations_file: './data/ESC-50-master/meta/esc50.csv'
+    audio_dir: './data/ESC-50-master/audio/'
+    folds: [ 1, 2, 3, 4, 5 ]
+  urbansound8k:
+    annotations_file: './data/UrbanSound8K/metadata/UrbanSound8K.csv'
+    audio_dir: './data/UrbanSound8K/audio/'
+    folds: [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
 runs_dir : './runs/exp'
 target_size: 1.5 # target size in seconds
 target_sr: 22050 # target sample rate
