--- a/config_ref.yaml
+++ b/config_ref.yaml
@@ -1,5 +1,5 @@
 gpus: 1 # number of gpus
-workers: 0 # number of cpu threads
+workers: 1 # number of cpu threads
 model:
   type: "ghostnet"
   cnn:
@@ -15,13 +15,13 @@ model:
     num_patches: 64
     num_classes: 2
     dropout: 0.2
-learning_rate: 0.001 # initial learning rate
+learning_rate: 0.01 # initial learning rate
 weight_decay: 0 # optimizer weight decay
-epochs: 300
-batch_size: 32
+epochs: 200
+batch_size: 64
 datasets:
   mixup: True
-  main: 'esc50'
+  main: 'urbansound8k'
   audioset:
     annotations_file: './data/AudioSet/balanced_train_segments/filtered_balanced_train_segments.csv'
     audio_dir: './data/AudioSet/balanced_train_segments/'
@@ -32,10 +32,10 @@ datasets:
   urbansound8k:
     annotations_file: './data/UrbanSound8K/metadata/UrbanSound8K.csv'
     audio_dir: './data/UrbanSound8K/audio/'
-    folds: [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
+    folds: [6, 7, 8, 9, 10, 1, 2, 3, 4, 5]
 runs_dir : './runs/exp'
-target_size: 1 # target size in seconds
-target_sr: 22050 # target sample rate
+target_size: 1.5 # target size in seconds
+target_sr: 16000 # target sample rate
 transforms:
   type: "mel_spectrogram"
   mel_spectrogram:
