--- a/config_ref.yaml
+++ b/config_ref.yaml
@@ -4,7 +4,7 @@ model:
   type: "ghostnet"
   cnn:
     dim: 1
-    deepwise_separable: Ghost
+    deepwise_separable: None
   transformer:
     embed_dim: 16
     hidden_dim: 32
@@ -15,9 +15,9 @@ model:
     num_patches: 64
     num_classes: 2
     dropout: 0.2
-learning_rate: 0.001 # initial learning rate
+learning_rate: 0.01 # initial learning rate
 weight_decay: 0 # optimizer weight decay
-epochs: 300
+epochs: 200
 batch_size: 32
 datasets:
   mixup: True
@@ -35,7 +35,7 @@ datasets:
     folds: [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
 runs_dir : './runs/exp'
 target_size: 1 # target size in seconds
-target_sr: 22050 # target sample rate
+target_sr: 8820 # target sample rate
 transforms:
   type: "mel_spectrogram"
   mel_spectrogram:
